--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "check-prop-types": "^1.1.2",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "jest-enzyme": "^7.0.2"
+    "jest-enzyme": "^7.0.2",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4"
   }
 }
